--- a/vignettes/references.bib
+++ b/vignettes/references.bib
@@ -129,3 +129,48 @@ Section: Journal of Molecular Endocrinology},
 	doi = {10.1186/1471-2105-7-85},
 	url = {https://doi.org/10.1186/1471-2105-7-85}
 }
+
+@article{mar2009,
+	title = {Data-driven normalization strategies for high-throughput quantitative RT-PCR},
+	author = {Mar, Jessica C. and Kimura, Yasumasa and Schroder, Kate and Irvine, Katharine M. and Hayashizaki, Yoshihide and Suzuki, Harukazu and Hume, David and Quackenbush, John},
+	year = {2009},
+	month = {04},
+	date = {2009-04-19},
+	journal = {BMC Bioinformatics},
+	pages = {110},
+	volume = {10},
+	number = {1},
+	doi = {10.1186/1471-2105-10-110},
+	url = {https://doi.org/10.1186/1471-2105-10-110}
+}
+
+@article{bolstad2003,
+	title = {A comparison of normalization methods for high densityoligonucleotide array data based on variance and bias},
+	author = {Bolstad, B.M. and Irizarry, R.A and {Åstrand}, M. and Speed, T.P.},
+	year = {2003},
+	month = {01},
+	date = {2003-01-22},
+	journal = {Bioinformatics},
+	pages = {185--193},
+	volume = {19},
+	number = {2},
+	doi = {10.1093/bioinformatics/19.2.185},
+	url = {https://academic.oup.com/bioinformatics/article/19/2/185/372664},
+	langid = {en}
+}
+
+@article{stolovitzky1996,
+	title = {Efficiency of DNA replication in the polymerase chain reaction},
+	author = {Stolovitzky, G. and Cecchi, G.},
+	year = {1996},
+	month = {11},
+	date = {1996-11-12},
+	journal = {Proceedings of the National Academy of Sciences of the United States of America},
+	pages = {12947--12952},
+	volume = {93},
+	number = {23},
+	doi = {10.1073/pnas.93.23.12947},
+	note = {PMID: 8917524
+PMCID: PMC24026},
+	langid = {eng}
+}
