fixing incorrect equation in derivative quantities

--- a/vignettes/derivative_quantities.Rmd
+++ b/vignettes/derivative_quantities.Rmd
@@ -143,8 +143,8 @@ $$
 \begin{align}
 \text{Adjusted time-based method} & = 2^{-\Delta \Delta \text{Ct}} \\ 
 -\Delta \Delta \text{Ct} & = -(\Delta \text{Ct}_{t} - \Delta \text{Ct}_{t=0})\\
-\Delta \text{Ct}_{t} & = \phi_{\text{target}} \big( \text{Ct}_{\text{target},t} - \text{Ct}_{\text{reference},t} \big)\\
-\Delta \text{Ct}_{t=0} & = \phi_{\text{reference}} \big( \text{Ct}_{\text{target},t=0} - \text{Ct}_{\text{reference},t=0} \big)\\
+\Delta \text{Ct}_{t} & = \text{Ct}_{\text{target},t} \times \phi_{\text{target}} - \text{Ct}_{\text{reference},t} \times \phi_{\text{reference}}\\
+\Delta \text{Ct}_{t=0} & = \text{Ct}_{\text{target},t=0} \times \phi_{\text{target}} - \text{Ct}_{\text{reference},t=0} \times \phi_{\text{reference}}\\
 \tag{4}
 \end{align}
 $$ 
